--- a/public/components/sideBar.html
+++ b/public/components/sideBar.html
@@ -3,9 +3,13 @@
         font-size: 26px;
         color: rgb(150,150,150);
     }
-
+    .templateText {
+        margin: 5px;
+        padding: 5px;
+    }
     #dice {
         color: rgb(150,150,150);
+        margin: 5px;
         font-size: 120px;
     }
     #diceButton {
@@ -15,6 +19,7 @@
     }
     #randomText, #sideMyAccountText {
         font-size: 14px;
+        margin: 0 20px;
     }
 </style>
 <hr>
@@ -28,15 +33,15 @@
     <a id="closeSide" onclick="swapSideBarElement('closeSide')">&#10060</a>
 </div>
 <hr>
-<br>
+
 <div class="template" >
-    <h1>Side Bar H1</h1>
-    <h2>Side Bar H2</h2> 
-    <h3>Side Bar H3</h3>
-    <h4>Side Bar H4</h4>
-    <h5>Side Bar H5</h5>
-    <h6>Side Bar H6</h6>  
-    <p>Side Bar p</p> 
+    <h1 class="templateText">Side Bar H1</h1>
+    <h2 class="templateText">Side Bar H2</h2> 
+    <h3 class="templateText">Side Bar H3</h3>
+    <h4 class="templateText">Side Bar H4</h4>
+    <h5 class="templateText">Side Bar H5</h5>
+    <h6 class="templateText">Side Bar H6</h6>  
+    <p class="templateText">Side Bar p</p> 
     <br><br><br>   
 </div>
 <div class="random">
@@ -49,9 +54,9 @@
 </div>
 
 <div class="sideMyAccount">
-    <br>
+    
     <h6>Please login for My Account Side Panel features</h6>
-    <br>
+    
     <p id="sideMyAccountText">
          
         Monitor and control smart home devices directly while browsing the site or playing a game from the <i>Software</i> tab. Modular unit, focal point of login features, will eventually come with full screen and minimize to navigation panel options.
