Did a lot, highlight: 5 dice option added instead of just 1, boo ya yahtzee incoming!

--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -1,9 +1,22 @@
+<style>
+#contactInfoLink {
+    text-decoration:none;
+    color: rgb(50,50,200);
+    font-size: 24px;
+}
+#contactInfoLink:hover {
+    color: rgb(20, 220, 20);
+}
+
+</style>
 <!-- class=".footer" -->
-<br><br><br><br><br> 
+<br><br><br>
+<br><br><br>
 <p>© 2020 - Pillon Engineering</p>
-<br><br>
-<a href="javascript:void(0)" 
-id="contact" 
-onclick="navigateMain('.mainContent', this.id)"
->Contact Info</a>
-<br><br><br><br><br><br><br><br><br> 
+<br>
+<a href="/misc/contact.html"    
+    id="contactInfoLink" 
+    >Contact Info</a>
+<br><br><br>
+<br><br><br>
+<br><br><br> 
