--- a/public/components/navBar.html
+++ b/public/components/navBar.html
@@ -1,12 +1,19 @@
 <!-- class=".headerMain" -->
-
+<style>
+    #PELogoContainer {
+        margin: 0;
+        padding: 0;
+    }
+</style>
 <div class="mainNavBar">
                 
-    <img 
-    id="imagePELogo",
-    src='/images/pELogo1.png',
-    alt='PE'>
-                
+    <a id="PELogoContainer" href="#imageLogo">
+        <img 
+        id="imagePELogo",
+        src='/images/pELogo1.png',
+        alt='PE'>
+    </a>         
+
     <img id="imageSearchLogo"
         src='/images/magGlass1.png'
         alt='Mag Glass'
